--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/Index.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/Index.cshtml
@@ -51,14 +51,14 @@
                                     <div class="col-sm-6 col-md-7">
                                         <div class="about-info">
                                             <p><span class="title-s">Name: </span> <span>DrMad Will</span></p>
-                                            <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
+                                            <p><span class="title-s">Skill: </span> <span>full stack developer</span></p>
                                             <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
                                             <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="skill-mf">
-                                    <p class="title-s">Skill</p>
+                                    <p class="title-s">Code Skill</p>
                                     <span>HTML</span> <span class="pull-right">85%</span>
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
