Create PorfolioSingle View
 View Add and DetailImages Table add UnComplate  Index Views

--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/Index.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Home Page";
 
     List<string> services = new List<string>()
-    {
+{
         "Web Design",
         "Web Development",
         "Photography",
@@ -52,8 +52,14 @@
                                     </div>
                                     <div class="col-sm-6 col-md-7">
                                         <div class="about-info">
-                                            <p><span class="title-s">Name: </span> <span>DrMad Will</span></p>
-                                            <p><span class="title-s">Skill: </span> <span>full stack developer</span></p>
+                                            <p><span class="title-s">Name: </span> <span>@Model.About.Name</span></p>
+                                            <p>
+                                                <span class="title-s">Skill: </span>
+                                                @foreach (var item in Model.About.Skills)
+                                                {
+                                                    <span class="mx-2"> @item</span>
+                                                }
+                                            </p>
                                             <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
                                             <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
                                         </div>
@@ -61,22 +67,13 @@
                                 </div>
                                 <div class="skill-mf">
                                     <p class="title-s">Code Skill</p>
-                                    <span>HTML</span> <span class="pull-right">85%</span>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                    <span>CSS3</span> <span class="pull-right">75%</span>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                    <span>PHP</span> <span class="pull-right">50%</span>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                    <span>JAVASCRIPT</span> <span class="pull-right">90%</span>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
+                                    @foreach (var item in Model.About.SkillCodes)
+                                    {
+                                        <span>@item.Name</span> <span class="pull-right">@item.Percent%</span>
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="width: @item.Percent%;" aria-valuenow="@item.Percent" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                    }
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -86,22 +83,7 @@
                                             About me
                                         </h5>
                                     </div>
-                                    <p class="lead">
-                                        Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                                        imperdiet et, porttitor
-                                        at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                                        porttitor accumsan tincidunt.
-                                    </p>
-                                    <p class="lead">
-                                        Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                                        porttitor volutpat. Vestibulum
-                                        ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
-                                    </p>
-                                    <p class="lead">
-                                        Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                                        Nulla porttitor accumsan
-                                        tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
-                                    </p>
+                                    @Html.Raw(Model.About.Descriptoion)
                                 </div>
                             </div>
                         </div>
@@ -110,6 +92,7 @@
             </div>
         </div>
     </section><!-- End About Section -->
+
     <!-- ======= Services Section ======= -->
     <section id="services" class="services-mf pt-5 route">
         <div class="container">
@@ -127,19 +110,17 @@
                 </div>
             </div>
             <div class="row">
-                @foreach (var item in ViewBag.PartfolioServices)
+                @foreach (var item in Model.Services)
                 {
                     <div class="col-md-4">
                         <div class="service-box">
                             <div class="service-ico">
-                                <span class="ico-circle"><i class="@item.ClassName"></i></span>
+                                <span class="ico-circle"> @Html.Raw(item.Icon)</span>
                             </div>
                             <div class="service-content">
-                                <h2 class="s-title">@item.title</h2>
+                                <h2 class="s-title">@item.Name</h2>
                                 <p class="s-description text-center">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                                    provident vitae! Magni
-                                    tempora perferendis eum non provident.
+                                    @item.Descriptoion
                                 </p>
                             </div>
                         </div>
@@ -149,58 +130,34 @@
             </div>
         </div>
     </section><!-- End Services Section -->
+
     <!-- ======= Counter Section ======= -->
-    <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/counters-bg.jpg)">
+    <div class="section-counter paralax-mf bg-image" style="background-image: url(/img/counters-bg.jpg) ">
         <div class="overlay-mf"></div>
         <div class="container position-relative">
             <div class="row">
-                <div class="col-sm-3 col-lg-3">
-                    <div class="counter-box counter-box pt-4 pt-md-0">
-                        <div class="counter-ico">
-                            <span class="ico-circle"><i class="bi bi-check"></i></span>
-                        </div>
-                        <div class="counter-num">
-                            <p data-purecounter-start="0" data-purecounter-end="450" data-purecounter-duration="1" class="counter purecounter"></p>
-                            <span class="counter-text">WORKS COMPLETED</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3 col-lg-3">
-                    <div class="counter-box pt-4 pt-md-0">
-                        <div class="counter-ico">
-                            <span class="ico-circle"><i class="bi bi-journal-richtext"></i></span>
-                        </div>
-                        <div class="counter-num">
-                            <p data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="counter purecounter"></p>
-                            <span class="counter-text">YEARS OF EXPERIENCE</span>
+
+                @foreach (var item in Model.Achievements)
+                {
+                    <div class="col-sm-3 col-lg-3">
+                        <div class="counter-box counter-box pt-4 pt-md-0">
+                            <div class="counter-ico">
+                                <span class="ico-circle">@Html.Raw(item.Icon)</span>
+                            </div>
+                            <div class="counter-num">
+                                <p data-purecounter-start="0" data-purecounter-end="@item.Count" data-purecounter-duration="1" class="counter purecounter"></p>
+                                <span class="counter-text">@item.Name</span>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-3 col-lg-3">
-                    <div class="counter-box pt-4 pt-md-0">
-                        <div class="counter-ico">
-                            <span class="ico-circle"><i class="bi bi-people"></i></span>
-                        </div>
-                        <div class="counter-num">
-                            <p data-purecounter-start="0" data-purecounter-end="550" data-purecounter-duration="1" class="counter purecounter"></p>
-                            <span class="counter-text">TOTAL CLIENTS</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3 col-lg-3">
-                    <div class="counter-box pt-4 pt-md-0">
-                        <div class="counter-ico">
-                            <span class="ico-circle"><i class="bi bi-award"></i></span>
-                        </div>
-                        <div class="counter-num">
-                            <p data-purecounter-start="0" data-purecounter-end="48" data-purecounter-duration="1" class="counter purecounter"></p>
-                            <span class="counter-text">AWARD WON</span>
-                        </div>
-                    </div>
-                </div>
+                }
+
+                 
+                
             </div>
         </div>
     </div><!-- End Counter Section -->
+
     <!-- ======= Portfolio Section ======= -->
     <section id="work" class="portfolio-mf sect-pt4 route">
         <div class="container">
@@ -218,27 +175,29 @@
                 </div>
             </div>
             <div class="row">
-                @foreach (var work in ViewBag.WorkImage)
+
+
+                @foreach (var work in Model.Portfolios)
                 {
 
                     <div class="col-md-4">
                         <div class="work-box">
-                            <a href="~/img/@work.location" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                            <a href="~/img/@work.Image" data-gallery="portfolioGallery" class="portfolio-lightbox">
                                 <div class="work-img">
-                                    <img src="~/img/@work.location" alt="" class="img-fluid">
+                                    <img src="~/img/@work.Image" alt="" class="img-fluid">
                                 </div>
                             </a>
                             <div class="work-content">
                                 <div class="row">
                                     <div class="col-sm-8">
-                                        <h2 class="w-title">@work.title</h2>
+                                        <h2 class="w-title">@work.Title</h2>
                                         <div class="w-more">
-                                            <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                                            <span class="w-ctegory">@work.PortfolioCategory.Name</span> / <span class="w-date">18 Sep. 2018</span>
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
                                         <div class="w-like">
-                                            <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                                            <a href="Home/PortfolioSinglePage"> <span class="bi bi-plus-circle"></span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -250,6 +209,7 @@
             </div>
         </div>
     </section><!-- End Portfolio Section -->
+
     <!-- ======= Testimonials Section ======= -->
     <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/overlay-bg.jpg)">
         <div class="overlay-mf"></div>
@@ -291,8 +251,8 @@
             </div>
         </div>
     </div><!-- End Testimonials Section -->
-    <!-- ======= Blog Section ======= -->
 
+    <!-- ======= Blog Section ======= -->
     <section id="blog" class="blog-mf sect-pt4 route">
         <div class="container">
             <div class="row">
@@ -348,8 +308,9 @@
             </div>
         </div>
     </section><!-- End Blog Section -->
+
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)">
+    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(/img/overlay-bg.jpg)">
         <div class="overlay-mf"></div>
         <div class="container">
             <div class="row">
