--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/Index.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/Index.cshtml
@@ -1,22 +1,26 @@
 ﻿@model IndexVM
+@using System.Text;
 
 @{
     ViewData["Title"] = "Home Page";
 
-    List<string> services = new List<string>()
-{
-        "Web Design",
-        "Web Development",
-        "Photography",
-        "Responsive Design",
-        "Graphic Design",
-        "Marketing Services"
-    };
+    StringBuilder skils = new StringBuilder();
 
 
-
-
+    for (int i = 0; i < Model.About.Skills.Count; i++)
+    {
+        if (i == 0)
+        {
+            skils.Append(Model.About.Skills[i].Name);
+        }
+        else
+        {
+            skils.Append(",");
+            skils.Append(Model.About.Skills[i].Name);
+        }
+    }
 }
+
 
 
 <!-- ======= Hero Section ======= -->
@@ -27,7 +31,7 @@
             <div class="container">
                 <!--<p class="display-6 color-d">Hello, world!</p>-->
                 <h1 class="hero-title mb-4">@Model.Home.HomeSlogan</h1>
-                <p class="hero-subtitle"><span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+                <p class="hero-subtitle"><span class="typed" data-typed-items="@skils.ToString()"></span></p>
                 <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
             </div>
         </div>
@@ -55,13 +59,10 @@
                                             <p><span class="title-s">Name: </span> <span>@Model.About.Name</span></p>
                                             <p>
                                                 <span class="title-s">Skill: </span>
-                                                @foreach (var item in Model.About.Skills)
-                                                {
-                                                    <span class="mx-2"> @item</span>
-                                                }
+                                                <span class="mx-2"> @Model.About.MainSkill</span>
                                             </p>
-                                            <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
-                                            <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
+                                            <p><span class="title-s">Email: </span> <span>@Model.Contact.Email</span></p>
+                                            <p><span class="title-s">Phone: </span> <span>@Model.Contact.PhoneNumber</span></p>
                                         </div>
                                     </div>
                                 </div>
@@ -152,8 +153,8 @@
                     </div>
                 }
 
-                 
-                
+
+
             </div>
         </div>
     </div><!-- End Counter Section -->
@@ -182,9 +183,9 @@
 
                     <div class="col-md-4">
                         <div class="work-box">
-                            <a href="~/img/@work.Image" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                            <a href="~/img/Porfolio/@work.Image" data-gallery="portfolioGallery" class="portfolio-lightbox">
                                 <div class="work-img">
-                                    <img src="~/img/@work.Image" alt="" class="img-fluid">
+                                    <img src="~/img/Porfolio/@work.Image" alt="" class="img-fluid">
                                 </div>
                             </a>
                             <div class="work-content">
@@ -197,7 +198,7 @@
                                     </div>
                                     <div class="col-sm-4">
                                         <div class="w-like">
-                                            <a href="Home/PortfolioSinglePage"> <span class="bi bi-plus-circle"></span></a>
+                                            <a href="/Home/PortfolioSinglePage"> <span class="bi bi-plus-circle"></span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -211,28 +212,26 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/overlay-bg.jpg)">
+    <div class="testimonials paralax-mf bg-image" style="background-image: url(/img/overlay-bg.jpg)">
         <div class="overlay-mf"></div>
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-
                     <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
                         <div class="swiper-wrapper">
 
-                            @foreach (var item in ViewBag.Testimonials)
+                            @foreach (var item in Model.Referances)
                             {
 
                                 <div class="swiper-slide">
                                     <div class="testimonial-box">
                                         <div class="author-test">
-                                            <img src="~/img/@item.location" alt="" class="rounded-circle b-shadow-a">
-                                            <span class="author">@item.title</span>
+                                            <img src="~/img/@item.Image" alt="" class="rounded-circle b-shadow-a">
+                                            <span class="author">@item.Name</span>
                                         </div>
                                         <div class="content-test">
                                             <p class="description lead">
-                                                Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet,
-                                                consectetur adipiscing elit.
+                                                @item.Title
                                             </p>
                                         </div>
                                     </div>
@@ -269,40 +268,37 @@
                 </div>
             </div>
             <div class="row">
-                @foreach (var img in ViewBag.ImageData)
+                @foreach (var item in Model.Blogs)
                 {
                     <div class="col-md-4">
                         <div class="card card-blog">
                             <div class="card-img">
-                                <a asp-controller="Home" asp-action="SinglePage"><img src="~/img/@img.location" alt="" class="img-fluid"></a>
+                                <a asp-controller="Home" asp-action="SinglePage"><img src="~/img/Blog/@item.Image" alt="" class="img-fluid"></a>
                             </div>
                             <div class="card-body">
                                 <div class="card-category-box">
                                     <div class="card-category">
-                                        <h6 class="category">@img.title</h6>
+                                        <h6 class="category">@item.BlogCategory.Name</h6>
                                     </div>
                                 </div>
-                                <h3 class="card-title"><a asp-controller="Home" asp-action="SinglePage">See more ideas about @img.title</a></h3>
+                                <h3 class="card-title"><a asp-controller="Home" asp-action="SinglePage">@item.Title</a></h3>
                                 <p class="card-description">
-                                    Proin eget tortor risus. Pellentesque in ipsum id orci porta dapibus. Praesent sapien massa, convallis
-                                    a pellentesque nec,
-                                    egestas non nisi.
+                                    @item.Description
                                 </p>
                             </div>
                             <div class="card-footer">
                                 <div class="post-author">
-                                    <a href="#">
+                                    <a href="#about">
                                         <img src="~/img/testimonial-2.jpg" alt="" class="avatar rounded-circle">
-                                        <span class="author">DrMad Will</span>
+                                        <span class="author">@Model.About.Name</span>
                                     </a>
                                 </div>
                                 <div class="post-date">
-                                    <span class="bi bi-clock"></span> 10 min
+                                    <span class="bi bi-clock"></span> @item.Date
                                 </div>
                             </div>
                         </div>
                     </div>
-
                 }
 
             </div>
@@ -367,23 +363,26 @@
                                     </div>
                                     <div class="more-info">
                                         <p class="lead">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                                            expedita aperiam aliquid at.
-                                            Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                                            mollitia inventore?
+                                            @Model.Contact.Description
                                         </p>
                                         <ul class="list-ico">
-                                            <li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                                            <li><span class="bi bi-phone"></span> (617) 557-0089</li>
-                                            <li><span class="bi bi-envelope"></span> contact@example.com</li>
+                                            <li><span class="bi bi-geo-alt"></span> @Model.Contact.Location</li>
+                                            <li><span class="bi bi-phone"></span> @Model.Contact.PhoneNumber</li>
+                                            <li><span class="bi bi-envelope"></span> @Model.Contact.Email</li>
                                         </ul>
                                     </div>
                                     <div class="socials">
                                         <ul>
-                                            <li><a href=""><span class="ico-circle d-flex justify-content-center align-items-center"><i class="bi bi-facebook"></i></span></a></li>
-                                            <li><a href=""><span class="ico-circle d-flex justify-content-center align-items-center"><i class="bi bi-instagram"></i></span></a></li>
-                                            <li><a href=""><span class="ico-circle d-flex justify-content-center align-items-center"><i class="bi bi-twitter"></i></span></a></li>
-                                            <li><a href=""><span class="ico-circle d-flex justify-content-center align-items-center"><i class="bi bi-linkedin"></i></span></a></li>
+                                            @foreach (var item in Model.Contact.ContactOnlines)
+                                            {
+                                                <li>
+                                                    <a href="@item.Url">
+                                                        <span class="ico-circle d-flex justify-content-center align-items-center">
+                                                            @Html.Raw(item.Icon)
+                                                        </span>
+                                                    </a>
+                                                </li>
+                                            }
                                         </ul>
                                     </div>
                                 </div>
