--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Shared/_Layout.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Shared/_Layout.cshtml
@@ -43,12 +43,21 @@
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto " asp-fragment="hero" asp-controller="Home" asp-action="Index" >Home</a></li>
-                    <li><a class="nav-link scrollto" asp-fragment="about" asp-controller="Home" asp-action="Index" >About</a></li>
+                    <li><a class="nav-link scrollto " asp-fragment="hero" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a class="nav-link scrollto" asp-fragment="about" asp-controller="Home" asp-action="Index">About</a></li>
                     <li><a class="nav-link scrollto" asp-fragment="services" asp-controller="Home" asp-action="Index">Services</a></li>
                     <li><a class="nav-link scrollto " asp-fragment="work" asp-controller="Home" asp-action="Index">Work</a></li>
                     <li><a class="nav-link scrollto " asp-fragment="blog" asp-controller="Home" asp-action="Index">Blog</a></li>
                     <li><a class="nav-link scrollto" asp-fragment="contact" asp-controller="Home" asp-action="Index">Contact</a></li>
+                    <li class="dropdown">
+                        <a href="#"><i style="font-size:1.5rem;" class="bi bi-person"></i> <i class="bi bi-chevron-down"></i></a>
+                        <ul>
+                            <li><a href="#">Drop Down 1</a></li>
+                            <li><a href="#">Drop Down 2</a></li>
+                            <li><a href="#">Drop Down 3</a></li>
+                            <li><a href="#">Drop Down 4</a></li>
+                        </ul>
+                    </li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
