--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -99,22 +99,21 @@
                                     <li><a href="grid.html">grid system</a></li>
                                 </ul>
                             </li>
-                            <li>
-                                <a href="javascript:void(0)" aria-expanded="true"><i class="ti-slice"></i><span>icons</span></a>
+                            <li class="active">
+                                <a href="javascript:void(0)" aria-expanded="true"><i class="ti-user"></i><span>User</span></a>
                                 <ul class="collapse">
-                                    <li><a href="fontawesome.html">fontawesome icons</a></li>
-                                    <li><a href="themify.html">themify icons</a></li>
+                                    <li><a href="/Admin/Account/List">User List</a></li>
+                                    <li><a href="/Admin/Account/Create">User Create </a></li>
                                 </ul>
                             </li>
                             <li>
                                 <a href="javascript:void(0)" aria-expanded="true">
-                                    <i class="fa fa-table"></i>
-                                    <span>Tables</span>
+                                    <i class="fa fa-cogs"></i>
+                                    <span>Role</span>
                                 </a>
                                 <ul class="collapse">
-                                    <li><a href="table-basic.html">basic table</a></li>
-                                    <li class="active"><a href="table-layout.html">table layout</a></li>
-                                    <li><a href="datatable.html">datatable</a></li>
+                                    <li><a href="/Admin/Role/List">Role List</a></li>
+                                    <li><a href="/Admin/Role/Create">Role Create</a></li>
                                 </ul>
                             </li>
                             <li><a href="maps.html"><i class="ti-map-alt"></i> <span>maps</span></a></li>
