--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/Admin/_ViewImports.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/Admin/_ViewImports.cshtml
@@ -1,5 +1,8 @@
 ﻿@using ParfolioWebSiteView
+@using ParfolioWebSiteView.Areas.Admin.ViewModes
 @using ParfolioWebSiteView.Models
 @using ParfolioWebSiteView.ViewModels
 @using Microsoft.AspNetCore.Identity;
+@using PagedList;
+@using PagedList.Mvc;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
