--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Signin/ForgetPassword.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Signin/ForgetPassword.cshtml
@@ -2,7 +2,7 @@
     Layout = null;
 }
 
-@model SignInVM
+@model ForgetPasswordVM
 
 <!doctype html>
 <html class="no-js" lang="en">
@@ -10,7 +10,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Sign In</title>
+    <title>Forget Password</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="assets/images/icon/favicon.ico">
     <link rel="stylesheet" href="~/Admin/assets/css/bootstrap.min.css">
@@ -46,8 +46,8 @@
             <div class="login-box ptb--100">
                 <form method="post">
                     <div class="login-form-head">
-                        <h4>Sign In</h4>
-                        <p>Hello there, Sign in and start managing your Admin Template</p>
+                        <h4>Forget Password</h4>
+                        <p>Find Your Profil</p>
                     </div>
                     <div class="login-form-body">
                         <div class="form-gp">
@@ -56,28 +56,8 @@
                             <i class="ti-email"></i>
                             <span asp-validation-for="Email" class="d-block text-danger"></span>
                         </div>
-                        <div class="form-gp">
-                            <label asp-for="Password">Password</label>
-                            <input type="password" asp-for="Password">
-                            <i class="ti-lock"></i>
-                            <span asp-validation-for="Password" class="d-block text-danger"></span>
-                        </div>
-                        <div class="row mb-4 rmber-area">
-                            <div class="col-6">
-                                <div class="custom-control custom-checkbox mr-sm-2">
-                                    <input type="checkbox" class="custom-control-input" asp-for="RememberMe">
-                                    <label class="custom-control-label" asp-for="RememberMe">Remember Me</label>
-                                </div>
-                            </div>
-                            <div class="col-6 text-right">
-                                <a href="/Signin/ForgetPassword">Forgot Password?</a>
-                            </div>
-                        </div>
                         <div class="submit-btn-area">
                             <button id="form_submit" type="submit">Submit <i class="ti-arrow-right"></i></button>
-                        </div>
-                        <div class="form-footer text-center mt-5">
-                            <p class="text-muted">Don't have an account? <a href="/Signin/Register">Sign up</a></p>
                         </div>
                     </div>
                 </form>
