--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/Admin/Views/Account/Create.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/Admin/Views/Account/Create.cshtml
@@ -75,3 +75,19 @@
             </div>
         </div>
     </div>
+
+
+
+@section footer_link{
+
+    <script>
+        $(document).ready(function(){
+            $(".form-gp input").each(function(x){
+                if($(this).val()!=""){
+                    $(this).focus()
+                }
+            })
+        })
+    </script>
+
+ }
