--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/Admin/Views/Account/Update.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/Admin/Views/Account/Update.cshtml
@@ -44,7 +44,7 @@
                     </div>
                 </div>
 
-                
+
                 <div class="form-gp">
                     <label asp-for="FirstName">FirstName</label>
                     <input type="text" asp-for="FirstName">
@@ -94,3 +94,17 @@
         </div>
     </div>
 </div>
+
+@section footer_link{
+
+    <script>
+        $(document).ready(function(){
+            $(".form-gp input").each(function(x){
+                if($(this).val()!=""){
+                    $(this).focus()
+                }
+            })
+        })
+    </script>
+
+}
