--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/Admin/Views/Role/Update.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/Admin/Views/Role/Update.cshtml
@@ -13,3 +13,16 @@
         </form>
     </div>
 </div>
+@section footer_link{
+
+    <script>
+        $(document).ready(function(){
+            $(".form-gp input").each(function(x){
+                if($(this).val()!=""){
+                    $(this).focus()
+                }
+            })
+        })
+    </script>
+
+}
