main: DataBase FullComplate (Ready)

--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/SinglePage.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/SinglePage.cshtml
@@ -1,15 +1,13 @@
 ﻿
+
+
 @{
 
     ViewData["Title"] = "Single Page";
 
-
-
-
-
 }
 
-<div class="hero hero-single route bg-image" style="background-image: url(~/wwwroot/img/overlay-bg.jpg)">
+<div class="hero hero-single route bg-image" style="background-image: url(/img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="hero-content display-table">
         <div class="table-cell">
@@ -17,7 +15,7 @@
                 <h2 class="hero-title mb-4">Blog Details</h2>
                 <ol class="breadcrumb d-flex justify-content-center">
                     <li class="breadcrumb-item">
-                        <a href="#">Home</a>
+                        <a href="/">Home</a>
                     </li>
                     <li class="breadcrumb-item">
                         <a href="#">Library</a>
