--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/PortfolioSinglePage.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/PortfolioSinglePage.cshtml
@@ -1,4 +1,10 @@
-﻿<div class="hero hero-single route bg-image" style="background-image: url(/img/overlay-bg.jpg)">
+﻿@model Portfolio
+
+@{ 
+    ViewData["Title"] = "Portfolio Detail";
+}
+
+<div class="hero hero-single route bg-image" style="background-image: url(/img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="hero-content display-table">
         <div class="table-cell">
@@ -6,7 +12,7 @@
                 <h2 class="hero-title mb-4">Portfolio Details</h2>
                 <ol class="breadcrumb d-flex justify-content-center">
                     <li class="breadcrumb-item">
-                        <a href="#">Home</a>
+                        <a href="/Home/Index/@Model.User.UserName">Home</a>
                     </li>
                     <li class="breadcrumb-item active">Portfolio Details</li>
                 </ol>
@@ -27,18 +33,12 @@
                     <div class="portfolio-details-slider swiper">
                         <div class="swiper-wrapper align-items-center">
 
-                            <div class="swiper-slide">
-                                <img src="~/img/portfolio-details-1.jpg" alt="">
-                            </div>
-
-                            <div class="swiper-slide">
-                                <img src="~/img/portfolio-details-2.jpg" alt="">
-                            </div>
-
-                            <div class="swiper-slide">
-                                <img src="~/img/portfolio-details-3.jpg" alt="">
-                            </div>
-
+                            @foreach (var item in Model.PortfolioDetail.DetailImages)
+                            {
+                                <div class="swiper-slide">
+                                    <img src="~/img/PorfolioDetails/@item.Image">
+                                </div>
+                            }
                         </div>
                         <div class="swiper-pagination"></div>
                     </div>
@@ -48,16 +48,16 @@
                     <div class="portfolio-info">
                         <h3>Project information</h3>
                         <ul>
-                            <li><strong>Category</strong>: Web design</li>
-                            <li><strong>Client</strong>: ASU Company</li>
-                            <li><strong>Project date</strong>: 01 March, 2020</li>
-                            <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                            <li><strong>Category</strong>: @Model.PortfolioCategory.Name </li>
+                            <li><strong>Client</strong>: @Model.PortfolioDetail.Client</li>
+                            <li><strong>Project date</strong>: @Model.Date.ToShortDateString()</li>
+                            <li><strong>Project URL</strong>: <a href="@Model.PortfolioDetail.LocatoionURL">@Model.PortfolioDetail.LocatoionURL</a></li>
                         </ul>
                     </div>
                     <div class="portfolio-description">
-                        <h2>This is an example of portfolio detail</h2>
+                        <h2>@Model.Title</h2>
                         <p>
-                            Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                            @Model.PortfolioDetail.Descriptoion
                         </p>
                     </div>
                 </div>
